discussion/kv_engine/184678/184678_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Test ScanContext historyStartSeqno assumptions

Change-Id: Ica9ea1b52c51f125c9e8839a0fca412834fc25f7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-09 16:47:42.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-09 16:48:19.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/331453/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-09 17:18:13.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/768/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                      magma::Magma::SeqIterator::Mode mode) const;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:709:45: error: too many arguments to function call, expected single argument "size", have 2 arguments [clang-diagnostic-error]
    kvstore->setHistoryRetentionBytes(vbid, 1024 * 1024);
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:570:5: note: "setHistoryRetentionBytes" declared here
    void setHistoryRetentionBytes(size_t size) override;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:740:45: error: too many arguments to function call, expected single argument "size", have 2 arguments [clang-diagnostic-error]
    kvstore->setHistoryRetentionBytes(vbid, 1024 * 1024);
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:570:5: note: "setHistoryRetentionBytes" declared here
    void setHistoryRetentionBytes(size_t size) override;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:795:45: error: too many arguments to function call, expected single argument "size", have 2 arguments [clang-diagnostic-error]
    kvstore->setHistoryRetentionBytes(vbid, 0);
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:570:5: note: "setHistoryRetentionBytes" declared here
    void setHistoryRetentionBytes(size_t size) override;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:799:48: error: too many arguments to function call, expected single argument "size", have 2 arguments [clang-diagnostic-error]
    kvstore->setHistoryRetentionBytes(Vbid(0), 1024 * 1024);
                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:570:5: note: "setHistoryRetentionBytes" declared here
    void setHistoryRetentionBytes(size_t size) override;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:804:45: error: too many arguments to function call, expected single argument "size", have 2 arguments [clang-diagnostic-error]
    kvstore->setHistoryRetentionBytes(vbid, 0);
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:570:5: note: "setHistoryRetentionBytes" declared here
    void setHistoryRetentionBytes(size_t size) override;
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/768/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/768/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/945/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-kvstore.h(774): error C2039: "Mode": is not a member of "magma::Magma::SeqIterator" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/945/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/739/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/739/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/779/ : FAILURE

Compile error at [2023-01-09T16:54:32.920Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/779/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/780/ : FAILURE

Compile error at [2023-01-09T17:07:47.482Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/780/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/773/ : FAILURE

Compile error at [2023-01-09T16:55:11.690Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/773/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/787/ : FAILURE

Compile error at [2023-01-09T17:04:01.393Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/787/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/760/ : FAILURE

Compile error at [2023-01-09T17:06:53.266Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/760/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/789/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [49/160]: stats vkey callback tests...Exceeded maximum wait time of 60000000us waiting for stat "ep_total_persisted" to be 1 (last value:0) - aborting.
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/789/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/789/ )

Test exceeded the timeout:
[2023-01-09T17:14:52.760Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/789/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1053/ : FAILURE

Compile error at [2023-01-09T16:55:57.206Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1053/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22045/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
